# KnowledgeNotes

./: .gitignore  404.html  README.md  index.html  maxTreeDepth.py  mkdocs.yml  preOrderTravsTree.py  prepare_site.py  requirements.txt  travsTreeByLevel.py
QueueStack/: BFS.cpp
Statistics_Probability/: baysian.md
binaryTreeSearch/: findRangeSortedArr.py
data_structure_and_algos/: CMakeLists.txt
data_structure_and_algos/algos/backtracking/: backtracking.html  backtracking.md  findAllPermutations.cpp  findAllUniquePermutations.cpp  findAllValidParentheses.cpp  n_queens.cpp  validParentheses.cpp
data_structure_and_algos/algos/binary_search/: findMedianFromTwoSortedVectors.cpp  x_sqrt.cpp
data_structure_and_algos/algos/dynamic_programming/: dynamic_programming.html  dynamic_programming.md  findLongestPalindrome.cpp  findMaxNumBelowInputNumFromSet.cpp  findNumPathsInGrid.cpp  findNumPathsInGridWithObstacles.cpp  findShortestPathInGrid.cpp  findShortestPathInSparseGrid.cpp  trappingRainWater.cpp
data_structure_and_algos/algos/recursive/: sudoku.cpp
data_structure_and_algos/algos/search/: bfs_and_dfs.cpp  bfs_vs_dfs.html  bfs_vs_dfs.md  findMaxAreaIsland.cpp  findNumIslands.cpp  findPerimeterIsland.cpp
data_structure_and_algos/algos/sort/: bubble_sort.cpp  insertion_sort.cpp  quick_sort.cpp
data_structure_and_algos/data_structs/hash/: lruCache.cpp  twoSum.cpp
data_structure_and_algos/data_structs/list/: addTwoNumbers.cpp  reverseInt.cpp  rotateList.cpp
data_structure_and_algos/data_structs/stack_heap_queue/: findTheKthLargest.cpp  summary.html  summary.md
data_structure_and_algos/data_structs/string/: findArticleWordCount.cpp  findLongestNonRepeatingSubstring.cpp
data_structure_and_algos/data_structs/tree/: TreeNode.hpp  binary_tree.html  binary_tree.md  binary_tree_insert.hpp  binary_tree_rotation.hpp  binary_tree_run.cpp  binary_tree_search.hpp  findDeepestDepth.cpp  findLowestCommonAncestor.cpp  kd_tree.cpp  node.hpp  reverseBinaryTree.cpp
data_structure_and_algos/data_structs/vector/: deleteOddElemsFromAVector.cpp  detectInPolygon.cpp  findConvexBoundingPolygon.cpp  isSubsetOfAVec.cpp  zigzagConversion.cpp
data_structure_and_algos/probability_and_statistics/: ants_leaving_bridge.html  eight_horse_racing.html  eight_horse_racing.md  money_hall_problem.html  money_hall_problem.md
database/: cluster.html  cluster.md  sharding_and_partitioning.html
db/: cluster.md  common_db_knowledge.md  sharding_and_partitioning.md  sql.md
dev_ops/: DevOps.md
fundamental_computer/: computer_architecture.md  obj_oriented_programming.md  terminologies.html  terminologies.md
languages/: bash.md  cpp.md  cpp_common_questions.md  java_advanced.md  java_basics.md  linux_bash.md  python.md  sql.md
languages/cpp/async/example/: CMakeLists.txt
languages/cpp/async/examples/: CMakeLists.txt
languages/cpp/async/examples/src/: coroutine_co_return.cpp
languages/cpp/async/examples/src/rpc/: compile_proto.sh  rpc_hello.grpc.pb.cc  rpc_hello.grpc.pb.h  rpc_hello.proto
languages/cpp/misc/debug/example/: CMakeLists.txt
languages/cpp/misc/debug/example/src/: mem_leak_test.cpp  mem_leak_test_simple.cpp
languages/cpp/misc/testing/examples/: CMakeLists.txt
languages/cpp/misc/testing/examples/include/: googletest.hpp
languages/cpp/misc/testing/examples/src/: googletest.cpp  googletest_mem_leak.cpp
languages/cpp/optimization/cuda/examples/: CMakeLists.txt
languages/cpp/optimization/cuda/examples/src/: cuda_1d.cu  heat_transfer.cu  heat_transfer_withTexture.cu
languages/cpp/optimization/example/: CMakeLists.txt
languages/cpp/optimization/example/src/: branching.cpp  measure_time_by_rdtsc.cpp  read_tsc.cpp  return_val_opt.cpp
languages/cpp/optimization/memory/examples/: CMakeLists.txt
languages/cpp/optimization/memory/examples/src/: MyLibAlloc.hpp  alloc.cpp  atomic_load_store.cpp
list/: test  test.cpp  test.out  twoPointerList2.cpp  twoSum  twoSum.cpp
math/: computer_vision_basics.md  linear_algebra.md  machine_learning.md  slam_basic.md  taylor_series.md
math/ai/cv/camera/examples/: CMakeLists.txt
math/ai/cv/camera/examples/src/: calibrate_cam.cpp
math/ai/cv/cv_features/examples/: CMakeLists.txt
math/ai/cv/cv_features/examples/src/: CannyDetector.cpp  HaarWavelet.cpp  ORB.cpp  SIFT.cpp
math/ai/cv/examples/: CMakeLists.txt
math/ai/cv/examples/python/: tps.py  tps_3d.py
math/ai/cv/examples/src/: Triangulation.cpp
math/algebra/group/lie_group_and_algebra/example/: CMakeLists.txt
math/slam/control/kinematics/examples/: CMakeLists.txt
math/slam/control/kinematics/examples/src/: quaternion_tests.py  sim3.cpp
math/slam/lidar_slam/examples/: CMakeLists.txt
math/slam/path/examples/: CMakeLists.txt
math/slam/path/examples/src/: dijkstra.cpp
math/slam/vslam/examples/: CMakeLists.txt  ceres.html  ceres.md
math/slam/vslam/examples/src/: ba_ceres.cpp  ba_g2o.cpp  ba_gauss_newton.cpp  optical_flow.cpp  pnp.cpp  se3Tools.hpp  triangulation_depth_estimate.cpp
mgt_and_design/: ITOfficeConcepts.html
mgt_and_tools/software_tools/CMake/: CMakeLists.txt
mssql/: notFound.sql
network/: data_communication.md  http_headers.html  http_headers.md  message_queue.md  networks.html  networks.md  unix_domain_socket.md  web_concepts_and_software.md
network/message_queue/examples/: CMakeLists.txt
network/message_queue/examples/src/: lockfree_mq_array.cpp  lockfree_mq_list.cpp
obj_oriented_programming/: OOP_basics.md  design_pattern.md
programming/cpp/meta_programming/examples/: CMakeLists.txt
programming/cpp/meta_programming/examples/src/: crtp.cpp  crtp_covariant.cpp  fibonacci.cpp  template_get_private.cpp
programming/cpp/optimization/cuda/examples/: CMakeLists.txt
programming/cpp/optimization/cuda/examples/src/: ray_tracing.cu  ray_tracing_withConstant.cu
programming/cpp/optimization/example/: CMakeLists.txt
programming/cpp/optimization/example/scripts/: dists.py
programming/cpp/optimization/example/src/: example_simd.cpp  pointer_vs_reference.cpp  read_time_perf_check.cpp  thread_aff.cpp
project_management/: DesignThinking.md
(+1606 files in other folders)
